Template created in Angular, to consume the spring client.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
   <div id="layoutSidenav_content">
     <main>
       <div class="container-fluid">
-
+        <app-home></app-home>
       </div>
       <footer class="py-4 bg-light mt-auto">
         <div class="container-fluid">
             <div class="d-flex align-items-center justify-content-between small">
-                <div class="text-muted">Copyright &copy; Your Website 2019</div>
+                <div class="text-muted">Copyright &copy; Meus Clientes 2019</div>
                 <div>
                     <a href="#">Privacy Policy</a>
                     &middot;
